--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jais-rishika.github.io/goodsManufacturer",
   "name": "goodsmanufacturer",
   "private": true,
   "version": "0.0.0",
